// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbstractTag renders with base props for 'dropdown' type 1`] = `
<span
  className="lab-tag  lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test DropdownTag
</span>
`;

exports[`AbstractTag renders with base props for 'removable' type 1`] = `
<span
  className="lab-tag  lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test RemovableTag
</span>
`;

exports[`AbstractTag renders with base props for 'simple' type 1`] = `
<span
  className="lab-tag  lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test SimpleTag
</span>
`;

exports[`AbstractTag renders with base props for 'togglable' type 1`] = `
<span
  className="lab-tag  lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test TogglableTag
</span>
`;
